[gd_scene load_steps=3 format=2]

[ext_resource path="res://Gates/Label/Label.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 123, 19.5 )

[node name="Label" type="Node2D" groups=["gates"]]
script = ExtResource( 1 )

[node name="gateColor" type="ColorRect" parent="."]
margin_right = 250.0
margin_bottom = 40.0
__meta__ = {
"_editor_description_": "this is a placeholder"
}

[node name="LineEdit" type="LineEdit" parent="."]
margin_right = 250.0
margin_bottom = 40.0
align = 1
max_length = 30

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 126, 20.5 )
shape = SubResource( 1 )

[connection signal="mouse_entered" from="LineEdit" to="." method="_on_LineEdit_mouse_entered"]
[connection signal="mouse_exited" from="LineEdit" to="." method="_on_LineEdit_mouse_exited"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
